about a hover kore niyen.. !  index ok ?

--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
     <!-- Title -->
     <title>Cloxxy - About Us</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
     <!-- Favicon -->
     <link rel="icon" href="./img/core-img/favicon.png">
     <!-- Font Awesome -->
@@ -181,84 +183,106 @@
 
     <!-- Meet Our Artist Start-->
     <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="text-center">Meet Our Artist</h2>
-                    <p class="text-center">Good morning forth gathering doesn't god gathering man and had moveth there dry
-                        sixth dominion rule divided behold after had he did not move .</p>
+        <div class="MeetTheTeam my-5 py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="text-center">Meet Our Artist</h2>
+                        <p class="text-center">Good morning forth gathering doesn't god gathering man and had moveth there
+                            dry
+                            sixth dominion rule divided behold after had he did not move .</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-4 col-lg-5 TeamMemberOutter pb-2">
+                        <div class="TeamMember" id="TeamMemberId1">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="TeamMemberName">
+                                        <h4 class="text-white">Rakib Hossain</h4>
+                                        <p>Developer</p>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="TeamMemberImg">
+                                        <img src="img/core-img/rk.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 mt-3 text-center">
+                                <p>Money won’t work for you until you work for money.
+                                    Work For Money Until Your Money Work For You </p>
+                            </div>
+                            <div class="TeamMemberSocial d-none" id="TeamMemberIcon1">
+                                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                                <a href="#"><i class="fab fa-linkedin"></i></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-5 TeamMemberOutter pb-2">
+                        <div class="TeamMember" id="TeamMemberId2">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="TeamMemberName">
+                                        <h4 class="text-white">Samiul Hasan</h4>
+                                        <p>Designer</p>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="TeamMemberImg">
+                                        <img src="img/core-img/antuu.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 mt-3 text-center">
+                                <p>Money won’t work for you until you work for money.
+                                    Work For Money Until Your Money Work For You </p>
+                            </div>
+                            <div class="TeamMemberSocial d-none" id="TeamMemberIcon2">
+                                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                                <a href="#"><i class="fab fa-linkedin"></i></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-5 TeamMemberOutter pb-2">
+                        <div class="TeamMember" id="TeamMemberId3">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="TeamMemberName">
+                                        <h4 class="text-white">Washim Reja Khan</h4>
+                                        <p>Developer</p>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="TeamMemberImg">
+                                        <img src="img/core-img/antu.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 mt-3 text-center">
+                                <p>Money won’t work for you until you work for money.
+                                    Work For Money Until Your Money Work For You </p>
+                            </div>
+                            <div class="TeamMemberSocial d-none" id="TeamMemberIcon3">
+                                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                                <a href="#"><i class="fab fa-linkedin"></i></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Meet Our Artist Body -->
-        <section class="team-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="single-team">
-                            <div class="side-one">
-                                <img src="img/core-img/antu.jpg" class="img-fluid" alt="">
-                                <h3 class="text-white text-uppercase">Samiul Hasan</h3>
-                                <p>UI / UX Designer</p>
-                            </div>
-                            <div class="side-two">
-                                <span>Samiul Hasan is our UI and UX Designer for the last 5 years. He has successfully
-                                    completed
-                                    over 1000+ project on his own.</span>
-                                <p class="socials">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="single-team">
-                            <div class="side-one">
-                                <img src="img/core-img/raj.jpg" class="img-fluid" alt="">
-                                <h3 class="text-white text-uppercase">Washim Reja Khan</h3>
-                                <p>Front-End Developer</p>
-                            </div>
-                            <div class="side-two">
-                                <span>Washim Reja Khan is our Front-End Developer for the last 5 years. He has successfully
-                                    completed
-                                    over 1000+ project on his own.</span>
-                                <p class="socials">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="single-team">
-                            <div class="side-one">
-                                <img src="img/core-img/rakib.jpg" class="img-fluid" alt="">
-                                <h3 class="text-white text-uppercase">Rakib Mondal</h3>
-                                <p>Back-End Developer</p>
-                            </div>
-                            <div class="side-two">
-                                <span>Rakib Mondal is our Back-End Developer for the last 6 years. He has successfully
-                                    completed
-                                    over 1000+ project on his own.</span>
-                                <p class="socials">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+    
     </section>
     <!-- Meet Our Artist End -->
+
+
 
     <!-- Big Icon Start -->
     <section>
