--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,8 @@
                         <h2 class="page-title text-white">Blog</h2>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html" class="text-white"><i class="icon_house_alt"></i>
+                                <li class="breadcrumb-item"><a href="index.html" class="text-white"><i
+                                            class="icon_house_alt"></i>
                                         Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Blog</li>
                             </ol>
@@ -100,8 +101,98 @@
 
 
 
+    <!-- Big Icon Start -->
+    <section>
+        <div class="container">
+            <div class="row mb-4">
+                <div class="social-icons-box">
+                    <h1 class="">Our Social Icons</h1>
+                    <div class="social-icons-list">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Big Icon End -->
 
+    <!-- Footer Start -->
+    <footer class="footer pt-4" style="background-image: url(img/bg-img/footer-background.jpg)">
+        <div class="container text-center text-md-left">
+            <div class="row">
+                <div class="col-md-3 mx-auto">
+                    <h5 class="footer font-weight-bold text-uppercase mt-3 mb-4">Cloxxy</h5>
+                    <p class="footer text-sm-justify text-lg-left">Eiusmod ad sint ad ut esse Lorem sit incididunt
+                        cillum sint exercitation consectetur.</p>
+                </div>
+                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-2 mx-auto">
+                    <h5 class="footer font-weight-bold text-uppercase mt-3 mb-4">USEFUL LINKS</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="footer">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="footer">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="footer">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="footer">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="footer">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-2 mx-auto">
+                    <h5 class="footer footerfont-weight-bold text-uppercase mt-3 mb-4">CONTACT US</h5>
+                    <ul class="list-unstyled">
+                        <address>
+                            Islampur Murshidabad <br>
+                            West Bengal <br>
+                            742304 <br>
+                            India <br>
+                            <i class="fas fa-phone-square"></i><a href="tel:+917001250500" class="footer">
+                                7001250500</a> <br>
+                            <i class="fas fa-envelope-open-text"></i><a href="mailto:samiulhasan1994@gmail.com"
+                                class="footer"> contact@cloxxy.in</a>
+                        </address>
+                    </ul>
+                </div>
+                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-3">
+                    <h5 class="footer font-weight-bold text-uppercase mt-3 mb-4">NEWSLATTER</h5>
+                    <ul class="list-unstyled">
+                        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+                        <button class="btn btn-info btn-block my-4 " type="submit">Sign in</button>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <ul class="list-unstyled list-inline text-center py-2">
+            <li class="list-inline-item">
+                <h5 class="footer mb-1">Hire Me</h5>
+            </li>
+            <li class="list-inline-item">
+                <a href="#!" class="btn btn-danger btn-rounded">Click Here</a>
+            </li>
+        </ul>
 
+        <div class="footer-copyright text-center py-3">© copyright all rights reserved:
+            <a href="#" class="footer"> cloxxy.in</a>
+        </div>
+    </footer>
 
 
     <!-- **** All JS Files ***** -->
